Fixing JDK compatibility issues
Signed-off-by: Aaron Alvarez <aaarone@amazon.com>